add gui last stage features and fix bug state